[TBD-2749] Fix missing langauge properties

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -212,3 +212,5 @@ TEZ_LIB_NAME.ITEM.JAR_NAME=Jar name
 TEZ_LIB_PATH.NAME=Lib path(folder or file)
 
 GROUP.NAME=Group
+
+CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
