TDI-34752: fix the tmarklogicoutput https://jira.talendforge.org/browse/TDI-34752

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMarkLogicOutput/tMarkLogicOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMarkLogicOutput/tMarkLogicOutput_messages.properties
@@ -9,7 +9,7 @@ PASSWORD.NAME=Password
 ACTION_TYPE.NAME=Action
 ACTION_TYPE.ITEM.INSERT=UPSERT
 ACTION_TYPE.ITEM.DELETE=DELETE
-ACTION_TYPE.ITEM.UPDATE=PATCH
+ACTION_TYPE.ITEM.PATCH=PATCH
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
 CONNECTION.NAME=Component List
 AUTO_GENERATE_DOC_ID.NAME=Auto Generate Doc ID
@@ -27,4 +27,4 @@ NB_LINE.NAME=NB_LINE
 NB_LINE_UPSERTED.NAME=NB_LINE_UPSERTED
 NB_LINE_DELETED.NAME=NB_LINE_DELETED
 NB_LINE_REJECTED.NAME=NB_LINE_REJECTED
-NB_LINE_UPDATED.NAME=NB_LINE_UPDATED
+NB_LINE_PATCHED.NAME=NB_LINE_PATCHED
