--- a/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
+++ b/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
@@ -81,6 +81,10 @@
             class="org.talend.repository.hadoopcluster.service.HadoopClusterService"
             serviceId="IHadoopClusterService">
       </Service>
+      <Service
+            class="org.talend.repository.hadoopcluster.service.HadoopDistributionService"
+            serviceId="IHadoopDistributionService">
+      </Service>
    </extension>
    <extension
          point="org.eclipse.ui.navigator.navigatorContent">
