TBD-3076 fixed - Use the folderName defined in the extension point declaration in the plugin.xml

--- a/main/plugins/org.talend.designer.components.bigdata/plugin.xml
+++ b/main/plugins/org.talend.designer.components.bigdata/plugin.xml
@@ -5,7 +5,7 @@
          point="org.talend.core.components_provider">
       <ComponentsProvider
             class="org.talend.designer.components.tishadoopprovider.TisHadoopComponentsProvider"
-            folderName="tishadoop"
+            folderName="components"
             id="org.talend.designer.components.tishadoopprovider.TisHadoopComponentsProvider">
       </ComponentsProvider>
    </extension>
