--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -475,6 +475,7 @@
              <library id="commons-logging-1.2.jar" />
              <library id="commons-cli-1.2.jar" />
              <library id="commons-collections-3.2.1.jar" />
+             <library id="commons-codec-1.9.jar" /> <!-- This jar is required for HDFS SSL connection-->
              <library id="avro-cdh5.5.0" />
              <library id="guava-12.0.1.jar" />
              <library id="protobuf-java-2.5.0.jar" />
