--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -52,6 +52,7 @@ DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
+DB_VERSION.ITEM.CASSANDRA_3_0_0=Cassandra 3.0.x
 COMPARATOR.NAME=Column name comparator
 COMPARATOR.ITEM.ASCIITYPE=AsciiTYPE
 COMPARATOR.ITEM.BYTESTYPE=BytesType
