--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -15,8 +15,9 @@ REPLICA_SET.ITEM.REPLICA_HOST=Host
 REPLICA_SET.ITEM.REPLICA_PORT=Port
 CONNECTION.NAME=Connection
 DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.MONGODB_3_2_X=MongoDB 3.2.X
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X (Deprecated)
 
 SET_READ_PREFERENCE.NAME=Set read preference
