TBD-3002: add Redshift components for Spark

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
 		<module>main/plugins/org.talend.libraries.hcatalog</module>
 		<module>main/plugins/org.talend.libraries.mongo</module>
 		<module>main/plugins/org.talend.libraries.neo4j</module>
+		<module>main/plugins/org.talend.libraries.redshift</module>
 		<module>main/plugins/org.talend.libraries.pig</module>
 		<module>main/plugins/org.talend.libraries.s3</module>
 		<module>main/plugins/org.talend.libraries.sdsulib</module>
