[TBD-3000] Support Aggregation pipelines in tMongoDBInput

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -57,3 +57,11 @@ AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
 KRB_USER_PRINCIPAL.NAME= User principal
 KRB_REALM.NAME=Realm
 KRB_KDC.NAME=KDC server
+
+AGGREGATION_STAGES.NAME = Aggregation Stages
+AGGREGATION_STAGES.ITEM.AGGREGATION_STAGE = Stage
+
+QUERY_SPECS.NAME = Query
+QUERY_TYPE.NAME = Query Type
+QUERY_TYPE.ITEM.AGGREGATION_QUERY = Aggregation Pipeline Query
+QUERY_TYPE.ITEM.FIND_QUERY = Find Query
