[TBD-3000] Support a separate authentication database

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages.properties
@@ -53,3 +53,6 @@ KRB_SERVICE_NAME.NAME=GSSAPI service name
 KRB_HOST_NAME.NAME=GSSAPI host name
 KRB_USER_PRINCIPAL.NAME=User principal
 KRB_AUTH_DATABASE.NAME=Authentication Database
+
+SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
+AUTHENTICATION_DATABASE.NAME=Authentication Database
