--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -65,3 +65,6 @@ QUERY_SPECS.NAME = Query
 QUERY_TYPE.NAME = Query Type
 QUERY_TYPE.ITEM.AGGREGATION_QUERY = Aggregation Pipeline Query
 QUERY_TYPE.ITEM.FIND_QUERY = Find Query
+
+SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
+AUTHENTICATION_DATABASE.NAME=Authentication Database
