--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -49,3 +49,6 @@ COMMAND_KEYVALUES.ITEM.VALUE = value
 
 EXECUTE_JSONCOMMAND.NAME = Construct command from a JSON string
 JSON_COMMAND.NAME = JSON String command
+
+SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
+AUTHENTICATION_DATABASE.NAME=Authentication Database
