--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
@@ -45,3 +45,6 @@ AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerbe
 AUTHENTICATION_MECHANISM.ITEM.PLAIN_MEC=PLAIN SASL
 AUTHENTICATION_MECHANISM.ITEM.SCRAMSHA1_MEC=SCRAM-SHA-1 SASL
 AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
+
+SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
+AUTHENTICATION_DATABASE.NAME=Authentication Database
