--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -94,3 +94,6 @@ KRB_REALM.NAME=Realm
 KRB_KDC.NAME=KDC server
 
 UPDATE_ALL.NAME=Update all documents
+
+SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
+AUTHENTICATION_DATABASE.NAME=Authentication Database
