[TBD-3000] New features on tMongoDBConnection
Support a separate authentication Database
Add advanced query options to Mongo Client

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -42,3 +42,9 @@ AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
 KRB_USER_PRINCIPAL.NAME= User principal
 KRB_REALM.NAME=Realm
 KRB_KDC.NAME=KDC server
+
+SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
+AUTHENTICATION_DATABASE.NAME=Authentication Database
+
+ADVANCED_QUERY_OPTIONS.NAME = Advanced Query Options
+ADVANCED_QUERY_OPTIONS.ITEM.QUERY_OPTION = Query Option
