[TBD-3000] Add Query timeout setting to tMongoDBConnection

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -46,5 +46,5 @@ KRB_KDC.NAME=KDC server
 SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
 AUTHENTICATION_DATABASE.NAME=Authentication Database
 
+QUERYOPTION_NOTIMEOUT.NAME = No Query Timeout
 ADVANCED_QUERY_OPTIONS.NAME = Advanced Query Options
-ADVANCED_QUERY_OPTIONS.ITEM.QUERY_OPTION = Query Option
