[TBD-3000] Add external sort setting to tMongoDBInput

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -68,3 +68,6 @@ QUERY_TYPE.ITEM.FIND_QUERY = Find Query
 
 SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
 AUTHENTICATION_DATABASE.NAME=Authentication Database
+
+EXTERNAL_SORT_AGGREGATION.NAME= Enable External Sort
+ADVANCED_AGGREGATION_OPTIONS.NAME = Advanced Aggregation Query Options
