TDI-33295 fixed - Add a way to define PERL 5 regular expression in the tHDFSPut

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
@@ -50,6 +50,7 @@ USERNAME.NAME=Username
 GROUP.NAME=Group
 LOCALDIR.NAME=Local directory
 REMOTEDIR.NAME=HDFS directory
+PERL5_REGEX.NAME=Use Perl5 Regex Expressions as Filemask (UnChecked means Glob Expressions)
 FILES.ITEM.FILEMASK=Filemask
 FILES.ITEM.NEWNAME=New name
 FILES.NAME=Files
