[TBD-3000] Add QUERYTIME for all input/output components

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -71,3 +71,6 @@ AUTHENTICATION_DATABASE.NAME=Authentication Database
 
 EXTERNAL_SORT_AGGREGATION.NAME= Enable External Sort
 ADVANCED_AGGREGATION_OPTIONS.NAME = Advanced Aggregation Query Options
+
+QUERYOPTION_NOTIMEOUT.NAME = No Query Timeout
+ADVANCED_QUERY_OPTIONS.NAME = Advanced Query Options
