--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -97,3 +97,6 @@ UPDATE_ALL.NAME=Update all documents
 
 SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
 AUTHENTICATION_DATABASE.NAME=Authentication Database
+
+QUERYOPTION_NOTIMEOUT.NAME = No Query Timeout
+ADVANCED_QUERY_OPTIONS.NAME = Advanced Query Options
