--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
@@ -48,3 +48,6 @@ AUTHENTICATION_MECHANISM.ITEM.KERBEROS_MEC=GSSAPI SASL (KERBEROS)
 
 SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
 AUTHENTICATION_DATABASE.NAME=Authentication Database
+
+QUERYOPTION_NOTIMEOUT.NAME = No Query Timeout
+ADVANCED_QUERY_OPTIONS.NAME = Advanced Query Options
