--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin_customization.ini
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin_customization.ini
@@ -1,2 +1,3 @@
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP=true
 org.eclipse.ui/KEY_CONFIGURATION_ID=org.talend.core.scheme
+org.eclipse.m2e.core/eclipse.m2.offline=true
