[TBD-3010] Fix & Clean tMongoDBGridFSProperties

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSProperties/tMongoDBGridFSProperties_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSProperties/tMongoDBGridFSProperties_messages.properties
@@ -60,9 +60,17 @@ KRB_KDC.NAME=KDC server
 
 QUERY_SPECS.NAME = Query
 QUERY_TYPE.NAME = Query Type
+QUERY_TYPE.ITEM.MONGO_QUERY=Mongo Query
+QUERY_TYPE.ITEM.STRING_FILENAME=Filename
+FILENAME.NAME=Filename
 
 SET_AUTHENTICATION_DATABASE.NAME=Set Authentication Database
 AUTHENTICATION_DATABASE.NAME=Authentication Database
 
 QUERYOPTION_NOTIMEOUT.NAME = No Query Timeout
 ADVANCED_QUERY_OPTIONS.NAME = Advanced Query Options
+
+GRIDFS.NAME=GridFS
+BUCKET.NAME=Bucket
+CHUNKS_COLLECTION.NAME=Chunks Collection
+FILES_COLLECTION.NAME=Files Collection
