TBD-3002: add Redshift components for Spark fix typo for redshift pom.xml

--- a/main/plugins/org.talend.libraries.redshift/pom.xml
+++ b/main/plugins/org.talend.libraries.redshift/pom.xml
@@ -7,6 +7,6 @@
     <version>6.2.0-SNAPSHOT</version>
     <relativePath>../../../</relativePath>
   </parent>
-  <artifactId>org.talend.libraries.pig</artifactId>
+  <artifactId>org.talend.libraries.redshift</artifactId>
   <packaging>eclipse-plugin</packaging>
 </project>
