TBD-3017 - Add support for HD Insight 3.3 in Hive, M/R and Pig components

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,8 @@
 		<module>main/plugins/org.talend.hadoop.distribution.emr400</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdinsight310</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdinsight320</module>
+		<module>main/plugins/org.talend.hadoop.distribution.hdinsight330</module>
+		<module>main/plugins/org.talend.hadoop.distribution.hdinsight330.jars</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdp120</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdp130</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdp200</module>
@@ -141,6 +143,7 @@
 		<module>test/plugins/org.talend.hadoop.distribution.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.cdh510mr2.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.hdinsight320.test</module>
+		<module>test/plugins/org.talend.hadoop.distribution.hdinsight330.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.mapr213.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.cdh540.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.hdp120.test</module>
