--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -67,7 +67,9 @@ USE_EXISTING_CONNECTION.NAME=Use existing connection
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 3.0.x/2.1.x/2.0.x
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.1.x/2.0.x
+DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x
+DB_VERSION.ITEM.CASSANDRA_3_0=Cassandra 3.0.x
 ROW_KEY_C_TYPE.NAME=Row key Cassandra type
 ROW_KEY_C_TYPE.ITEM.DEFAULT=Default
 ROW_KEY_C_TYPE.ITEM.COUNTERCOLUMNTYPE=CounterColumn
