--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages.properties
@@ -7,7 +7,7 @@ DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
 DB_VERSION.ITEM.CASSANDRA_2_1=Cassandra 2.1.x
 DB_VERSION.ITEM.CASSANDRA_2_2=Cassandra 2.2.x
-DB_VERSION.ITEM.CASSANDRA_3=Cassandra 3.3.x/3.2.x/3.1.x/3.0.x
+DB_VERSION.ITEM.CASSANDRA_3_0=Cassandra 3.3.x/3.2.x/3.1.x/3.0.x
 HOST.NAME=Host
 PORT.NAME=Port
 REQUIRED_AUTHENTICATION.NAME=Required authentication
