[TBD-3178] Backport JSON commands support in tMongoDBRow

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -45,3 +45,6 @@ EXECUTE_KEYVALUECOMMAND.NAME = Construct command from keys and values
 COMMAND_KEYVALUES.NAME = Command keys and values
 COMMAND_KEYVALUES.ITEM.KEY = key
 COMMAND_KEYVALUES.ITEM.VALUE = value
+
+EXECUTE_JSONCOMMAND.NAME = Construct command from a JSON string
+JSON_COMMAND.NAME = JSON String command 
