--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSPut/tMongoDBGridFSPut_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSPut/tMongoDBGridFSPut_messages.properties
@@ -72,10 +72,10 @@ ADVANCED_QUERY_OPTIONS.NAME = Advanced Query Options
 
 GRIDFS.NAME=GridFS
 BUCKET.NAME=Bucket
-CHUNKS_COLLECTION.NAME=Chunks Collection
-FILES_COLLECTION.NAME=Files Collection
 
-OUTPUT_PARAMS.NAME=Output Parameters
-OUTPUT_LOCAL_PATH.NAME=Local Folder
-OVERWRITE_LOCAL_FILES.NAME=Overwrite local files
-ID_AS_FILENAME.NAME=Use Document ID as output filename
+PUT_PARAMS.NAME=Put Parameters
+LOCALDIR.NAME=Local Folder
+PERL5_REGEX.NAME=Use Perl5 Regex Expressions as Filemask (unchecked means Glob Expressions)
+FILES.NAME=Files
+FILES.ITEM.FILEMASK=Filemask
+FILES.ITEM.NEWNAME=New name
