--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSList/tMongoDBGridFSList_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSList/tMongoDBGridFSList_messages.properties
@@ -80,3 +80,9 @@ SORTBY.ITEM.SIZE=File Size
 SORTBY.ITEM.UPLOADDATE=File Upload Date
 SORTORDER.ITEM.ASCENDING=Ascending
 SORTORDER.ITEM.DESCENDING=Descending
+
+CURRENT.FILEID.NAME= Current File Document ID
+CURRENT.FILENAME.NAME= Current File Name
+CURRENT.FILEUPLOADDATE.NAME= Current File Upload Date
+CURRENT.FILELENGTH.NAME= Current File Size
+CURRENT.FILEMD5.NAME= Current File MD5
