[TBD-3010] Fix global variables names in List

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSList/tMongoDBGridFSList_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSList/tMongoDBGridFSList_messages.properties
@@ -81,8 +81,8 @@ SORTBY.ITEM.UPLOADDATE=File Upload Date
 SORTORDER.ITEM.ASCENDING=Ascending
 SORTORDER.ITEM.DESCENDING=Descending
 
-CURRENT.FILEID.NAME= Current File Document ID
-CURRENT.FILENAME.NAME= Current File Name
-CURRENT.FILEUPLOADDATE.NAME= Current File Upload Date
-CURRENT.FILELENGTH.NAME= Current File Size
-CURRENT.FILEMD5.NAME= Current File MD5
+CURRENT_FILEID.NAME= Current File Document ID
+CURRENT_FILENAME.NAME= Current File Name
+CURRENT_FILEUPLOADDATE.NAME= Current File Upload Date
+CURRENT_FILELENGTH.NAME= Current File Size
+CURRENT_FILEMD5.NAME= Current File MD5
