[TBD-3016] Add impala compatibility; fix parquet on hive.

--- a/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
@@ -77,6 +77,14 @@
         </libraryNeeded>
 
         <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.1.0"
+            id="parquet-hive-bundle-1.6.0.jar"
+            name="parquet-hive-bundle-1.6.0.jar"
+            mvn_uri="mvn:org.talend.libraries/parquet-hive-bundle-1.6.0/6.2.0" >
+        </libraryNeeded>
+        
+
+        <libraryNeeded
             context="plugin:org.talend.libraries.hadoop"
             id="parquet-hadoop-bundle-1.6.0.jar"
             name="parquet-hadoop-bundle-1.6.0.jar" mvn_uri="mvn:org.talend.libraries/parquet-hadoop-bundle-1.6.0/6.1.0"
@@ -332,6 +340,7 @@
            <library id="libthrift-0.9.2.jar" />
            <library id="antlr-runtime-3.4.jar" />
            <library id="jdo-api-3.0.1.jar" />
+           <library id="parquet-hive-bundle-1.6.0.jar" />
         </libraryNeededGroup>
 
         
