--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,8 @@
 		<module>main/plugins/org.talend.hadoop.distribution.hdp210</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdp220</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdp230</module>
+		<module>main/plugins/org.talend.hadoop.distribution.hdp240</module>
+		<module>main/plugins/org.talend.hadoop.distribution.hdp240.jars</module>
 		<module>main/plugins/org.talend.hadoop.distribution.mapr200</module>
 		<module>main/plugins/org.talend.hadoop.distribution.mapr212</module>
 		<module>main/plugins/org.talend.hadoop.distribution.mapr213</module>
@@ -127,6 +129,7 @@
 		<module>test/plugins/org.talend.hadoop.distribution.cdh4mr1.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.emr240hive0131.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.hdp220.test</module>
+		<module>test/plugins/org.talend.hadoop.distribution.hdp240.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.mapr500.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.cdh4mr2.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
