TUP-4233: enhance token

--- a/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
+++ b/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
@@ -260,4 +260,11 @@
              serviceId="IRepositoryContextUpdateService">
        </Service>
     </extension>
+    <extension
+          point="org.talend.core.runtime.tokenInfo_provider">
+       <provider
+             collector="org.talend.repository.hadoopcluster.token.HadoopClusterTokenCollector"
+             id="HadoopClusterTokenCollector">
+       </provider>
+    </extension>
 </plugin>
