[TBD-3211] make cassandra support ssl

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages.properties
@@ -21,3 +21,5 @@ API_TYPE.NAME=API type
 API_TYPE.ITEM.HECTOR=Hector
 API_TYPE.ITEM.DATASTAX=Datastax
 KEY_SPACE.NAME=Keyspace
+SSL_SETTING.NAME=
+USE_SSL.NAME=Use SSL
