--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -89,3 +89,5 @@ API_TYPE.ITEM.HECTOR=Hector
 API_TYPE.ITEM.DATASTAX=Datastax
 QUERY.NAME=Query
 TABLE.NAME=Column family
+SSL_SETTING.NAME=
+USE_SSL.NAME=Use SSL
