--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -106,3 +106,5 @@ SIMEPLE_REPLICA_NUMBER.NAME=Replica number
 NETWORK_REPLICA_TABLE.NAME=Datacenter and Replica
 NETWORK_REPLICA_TABLE.ITEM.DATACENTER_NAME=Datacenter name
 NETWORK_REPLICA_TABLE.ITEM.REPLICA_NUMBER=Replica number
+SSL_SETTING.NAME=
+USE_SSL.NAME=Use SSL
