--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages.properties
@@ -21,5 +21,5 @@ API_TYPE.NAME=API type
 API_TYPE.ITEM.HECTOR=Hector
 API_TYPE.ITEM.DATASTAX=Datastax
 KEY_SPACE.NAME=Keyspace
-SSL_SETTING.NAME=
-USE_SSL.NAME=Use SSL
+HTTPS_SETTING.NAME=
+USE_HTTPS.NAME=Use SSL
