[TBD-3211] SSL Support for tCassandraRow

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages.properties
@@ -31,3 +31,5 @@ API_TYPE.NAME=API type
 API_TYPE.ITEM.HECTOR=Hector
 API_TYPE.ITEM.DATASTAX=Datastax
 TABLE.NAME=Column family
+HTTPS_SETTING.NAME=
+USE_HTTPS.NAME=Use SSL
