--- a/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr510/plugin.xml
@@ -261,6 +261,13 @@
             uripath="platform:/plugin/org.talend.libraries.hadoop.hdp.2.2/lib/high-scale-lib-1.1.1.jar">
         </libraryNeeded>
 
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.1.0"
+            id="commons-collections-3.2.2.jar"
+            name="commons-collections-3.2.2.jar"
+            mvn_uri="mvn:org.talend.libraries/commons-collections-3.2.2/6.2.0">
+        </libraryNeeded>
+
         <libraryNeededGroup
                 description="S3 libraries for MapR 5.1.0"
                 id="S3-LIB-MAPR510"
@@ -289,7 +296,7 @@
            <library id="slf4j-api-1.7.5.jar"/>
            <library id="slf4j-log4j12-1.7.5.jar"/>
            <library id="commons-logging-1.1.3.jar"/>
-           <library id="commons-collections-3.2.1.jar"/>
+           <library id="commons-collections-3.2.2.jar"/>
            <library id="commons-configuration-1.6.jar"/>
            <library id="commons-lang-2.6.jar"/>
            <library id="commons-io-2.4.jar"/>
@@ -311,7 +318,7 @@
            <library id="hadoop-auth-mapr-5.0.X-lastest"/>
            <library id="hadoop-common-mapr-5.0.X-lastest"/>
            <library id="commons-logging-1.1.3.jar"/>
-           <library id="commons-collections-3.2.1.jar"/>
+           <library id="commons-collections-3.2.2.jar"/>
            <library id="commons-configuration-1.6.jar"/>
            <library id="commons-lang-2.6.jar"/>
            <library id="commons-io-2.4.jar"/>
