--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -191,10 +191,13 @@
             mvn_uri="mvn:org.talend.libraries/pig-0.15.0.2.4.0.0-169-core-h2/6.1.0">
         </libraryNeeded>
         
-        <!-- Use HDP2_3 PiggyBank -->
-        
-        <!-- Spark libraries -->
-        
+        <libraryNeeded
+            context="plugin:org.talend.libraries.pig"
+            id="parquet-pig-bundle-1.3.2.jar"
+            name="parquet-pig-bundle-1.3.2.jar"
+            mvn_uri="mvn:org.talend.libraries/parquet-pig-bundle-1.3.2/6.0.0"
+            uripath="platform:/plugin/org.talend.libraries.pig/lib/parquet-pig-bundle-1.3.2.jar">
+        </libraryNeeded>       
                 
         <!-- Sqoop libraries -->        
         <libraryNeeded
@@ -278,10 +281,52 @@
             name="hadoop-aws-2.7.1.2.4.0.0-169.jar" 
             mvn_uri="mvn:org.talend.libraries/hadoop-aws-2.7.1.2.4.0.0-169/6.1.0">
         </libraryNeeded>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="spark-streaming-kinesis-asl-assembly-HDP_2_4"
+            name="spark-streaming-kinesis-asl-assembly_2.10-1.6.0.jar" 
+            mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl-assembly_2.10-1.6.0/6.1.0">
+        </libraryNeeded>
         
         <!-- Third parties libraries -->
-           
-                        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="avro-mapred-1.7.5-hadoop2-HDP_2_4"
+            name="avro-mapred-1.7.5-hadoop2.jar" 
+            mvn_uri="mvn:org.talend.libraries/avro-mapred-1.7.5-hadoop2/6.1.0">
+        </libraryNeeded>
+               
+        <!-- Spark libraries -->
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="spark-assembly-HDP_2_4"
+            name="talend-spark-assembly-1.6.0.2.4.0.0-169-hadoop2.7.1.2.4.0.0-169.jar"
+            mvn_uri="mvn:org.talend.libraries/talend-spark-assembly-1.6.0.2.4.0.0-169-hadoop2.7.1.2.4.0.0-169/6.1.0">
+        </libraryNeeded>
+        
+        <!-- Spark libraries -->
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="spark-streaming-kafka-HDP_2_4"
+            name="spark-streaming-kafka-assembly_2.10-1.6.0.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-streaming-kafka-assembly_2.10-1.6.0/6.1.0">
+        </libraryNeeded>
+       
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="kafka-HDP_2_4"
+            name="kafka_2.10-0.9.0.2.4.0.0-169.jar"
+            mvn_uri="mvn:org.talend.libraries/kafka_2.10-0.9.0.2.4.0.0-169.jar/6.1.0">
+        </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp240"
+            id="kafka-clients-HDP_2_4"
+            name="kafka-clients-0.9.0.2.4.0.0-169.jar"
+            mvn_uri="mvn:org.talend.libraries/kafka-clients-0.9.0.2.4.0.0-169/6.1.0">
+        </libraryNeeded>
+                                   
         <!-- Groups -->
         
         <!-- HDFS group -->
@@ -346,19 +391,15 @@
             <library id="slf4j-log4j12-1.7.10.jar"/>
         </libraryNeededGroup>
         
-        <!-- Map/Reduce parquet group -->
+        <!--Map/Reduce parquet group MRREQUIRED -->
         <libraryNeededGroup
-                description="Map/Reduce parquet libraries for HDP 2.4"
-                id="MAPREDUCE-PARQUET-LIB-HDP_2_4"
-                name="MAPREDUCE-PARQUET-LIB-HDP_2_4"  >
+                description="Map/Reduce parquet libraries for HDP 2.4 that are MRREQUIRED"
+                id="MAPREDUCE-PARQUET-LIB-MRREQUIRED-HDP_2_4"
+                name="MAPREDUCE-PARQUET-LIB-MRREQUIRED-HDP_2_4"  >
+             <library id="jodd-core-3.5.2.jar" />
              <library id="parquet-hadoop-bundle-1.6.0.jar" />
              <library id="snappy-java-1.0.4.1.jar" />
         </libraryNeededGroup>
-        
-        
-        <!-- TBT: Map/Reduce parquet group MRREQUIRED
-        <libraryNeededGroup>
-        </libraryNeededGroup> -->
         
         <!-- TBT: MapReduce HBase group -->
         <libraryNeededGroup
@@ -439,7 +480,6 @@
             <library id="servlet-api-2.5.jar"/>
             <library id="slf4j-api-1.7.10.jar"/>
             <library id="slf4j-log4j12-1.7.10.jar"/>
-            <library id="snappy-java-1.1.0.1.jar"/>
         </libraryNeededGroup>
         
         <!-- Pig HCatalog group -->
@@ -472,9 +512,13 @@
             <library id="zookeeper-HDP_2_4"/>
         </libraryNeededGroup>
 
-        <!-- TBT : Pig parquet group
+        <!-- Pig parquet group (snappy-java-1.0.5.jar is imported by tPigLoad)-->
         <libraryNeededGroup
-        </libraryNeededGroup> -->
+                description="Pig Parquet libraries for HDP 2.4"
+                id="PIG-PARQUET-LIB-HDP_2_4"
+                name="PIG-PARQUET-LIB-HDP_2_4">
+            <library id="parquet-pig-bundle-1.3.2.jar"/>
+        </libraryNeededGroup>
         
         <!-- Pig avro group -->
         <libraryNeededGroup
@@ -486,7 +530,7 @@
             <library id="piggybank-hdp2.3.jar"/>
         </libraryNeededGroup>
         
-        <!-- Pig RCFile group TBT with/without elephant-bird gropu from Pig component in tbd-se -->
+        <!-- Pig RCFile group -->
         <libraryNeededGroup
                 description="Pig RCFile libraries for HDP 2.4"
                 id="PIG-RCFILE-LIB-HDP_2_4"
@@ -494,11 +538,21 @@
             <library id="hive-common-HDP_2_4"/>
             <library id="hive-exec-HDP_2_4"/>
             <library id="hive-serde-HDP_2_4"/>
+            <library id="elephant-bird-core-4.9.jar"/>
+            <library id="elephant-bird-hadoop-compat-4.9.jar"/>
+            <library id="elephant-bird-rcfile-4.9-patched-hive-1.x.jar"/>
         </libraryNeededGroup>
         
-        <!-- TBT : Pig SequenceFile group
+        <!-- Pig SequenceFile group -->
         <libraryNeededGroup
-        </libraryNeededGroup> -->
+                description="Pig SequenceFile libraries for HDP 2.4"
+                id="PIG-SEQUENCEFILE-LIB-HDP_2_4"
+                name="PIG-SEQUENCEFILE-LIB-HDP_2_4">
+            <library id="elephant-bird-core-4.9.jar"/>
+            <library id="elephant-bird-hadoop-compat-4.9.jar"/>
+            <library id="elephant-bird-pig-4.9.jar"/>
+            <library id="pigutil.jar"/>
+        </libraryNeededGroup>
         
         <!-- Sqoop group -->
         <libraryNeededGroup
@@ -536,6 +590,7 @@
             <library id="slf4j-api-1.7.10.jar"/>
             <library id="slf4j-log4j12-1.7.10.jar"/>
             <library id="sqoop-HDP_2_4"/>
+            <library id="avro-mapred-1.7.5-hadoop2-HDP_2_4"/>
         </libraryNeededGroup>
         
         <!-- Hive group -->
@@ -704,41 +759,111 @@
             <library id="zookeeper-HDP_2_4"/>
         </libraryNeededGroup>
         
-        <!-- Spark group 
+        <!-- Spark group -->
         <libraryNeededGroup
+                description="Spark libraries for HDP 2.4"
+                id="SPARK-LIB-HDP_2_4"
+                name="SPARK-LIB-HDP_2_4">
+            <library id="spark-assembly-HDP_2_4" />
+            <library id="commons-cli-1.2.jar"/>
+            <library id="commons-codec-1.4.jar"/>
+            <library id="commons-collections-3.2.2.jar"/>
+            <library id="commons-configuration-1.6.jar"/>
+            <library id="commons-lang-2.6.jar"/>
+            <library id="commons-logging-1.1.3.jar"/>
+            <library id="guava-11.0.2.jar"/>
+            <library id="hadoop-mapreduce-client-common-HDP_2_4"/>
+            <library id="hadoop-mapreduce-client-core-HDP_2_4"/>
+            <library id="hadoop-mapreduce-client-jobclient-HDP_2_4"/>
+            <library id="hadoop-yarn-api-HDP_2_4"/>
+            <library id="hadoop-yarn-client-HDP_2_4"/>
+            <library id="hadoop-yarn-common-HDP_2_4"/>
+            <library id="htrace-core-3.1.0-incubating.jar"/>
         </libraryNeededGroup>
         
-        Spark group MRREQUIRED 
+        <!-- Spark group MRREQUIRED -->
         <libraryNeededGroup
-        </libraryNeededGroup>
-                
-        Spark Parquet group MRREQUIRED
-        <libraryNeededGroup            
+                description="Spark libraries for HDP 2.4 that are MRREQUIRED"
+                id="SPARK-LIB-MRREQUIRED-HDP_2_4"
+                name="SPARK-LIB-MRREQUIRED-HDP_2_4">
+             <library id="snappy-java-1.0.4.1.jar"/>
         </libraryNeededGroup>
         
-        Spark S3 group MRREQUIRED
+        <!-- Spark S3 group MRREQUIRED -->
         <libraryNeededGroup
+                description="Spark S3 libraries for HDP 2.4 that are MRREQUIRED"
+                id="SPARK-S3-LIB-MRREQUIRED-HDP_2_4"
+                name="SPARK-S3-LIB-MRREQUIRED-HDP_2_4">
+             <library id="hadoop-aws-HDP_2_4"/>
+             <library id="aws-java-sdk-1.7.4.jar"/>
+             <library id="jets3t-0.9.0" />
+             <library id="httpclient-4.2.5.jar" />
+             <library id="httpcore-4.2.5.jar" />
         </libraryNeededGroup>
         
-        Spark Hive group MRREQUIRED
-        <libraryNeededGroup            
-        </libraryNeededGroup>
-        
-        Spark Kinesis group MRREQUIRED
-        <libraryNeededGroup           
-        </libraryNeededGroup>
-        
-        Spark Kafka group MRREQUIRED
+        <!-- Spark Parquet group MRREQUIRED -->
         <libraryNeededGroup
+                description="Spark libraries for HDP 2.4 that are MRREQUIRED"
+                id="SPARK-PARQUET-LIB-MRREQUIRED-HDP_2_4"
+                name="SPARK-PARQUET-LIB-MRREQUIRED-HDP_2_4">
+             <library id="parquet-hadoop-bundle-1.6.0.jar" />
+             <library id="jodd-core-3.5.2.jar" />             
         </libraryNeededGroup>
         
-        Spark Kafka Client group MRREQUIRED
+        <!-- Spark Hive group MRREQUIRED -->
         <libraryNeededGroup
+                description="Spark Hive libraries for HDP 2.4 that are MRREQUIRED"
+                id="SPARK-HIVE-LIB-MRREQUIRED-HDP_2_4"
+                name="SPARK-HIVE-LIB-MRREQUIRED-HDP_2_4">
+            <library id="datanucleus-api-jdo-3.2.6.jar"/>
+            <library id="datanucleus-core-3.2.10.jar"/>
+            <library id="datanucleus-rdbms-3.2.9.jar"/>
         </libraryNeededGroup>
         
-        Spark Kafka Avro group MRREQUIRED
+        <!-- Spark Kinesis group MRREQUIRED -->
+        
+        <!-- Spark Kafka group MRREQUIRED -->
         <libraryNeededGroup
-        </libraryNeededGroup> -->
+                description="Spark Kafka assembly libraries for HDP 2.4 that are MRREQUIRED"
+                id="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-HDP_2_4"
+                name="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-HDP_2_4">
+            <library id="spark-streaming-kafka-HDP_2_4"/>
+            <library id="kafka-HDP_2_4"/>
+            <library id="metrics-core-2.2.0.jar"/>
+        </libraryNeededGroup>
+        
+        <!-- Spark Kafka Client group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark Kafka client libraries for HDP 2.4 that are MRREQUIRED"
+                id="SPARK-KAFKA-CLIENT-LIB-MRREQUIRED-HDP_2_4"
+                name="SPARK-KAFKA-CLIENT-LIB-MRREQUIRED-HDP_2_4">
+            <library id="kafka-clients-HDP_2_4"/>
+        </libraryNeededGroup>
+        
+        <!-- Spark Kafka Avro group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark Kafka Avro libraries for HDP 2.4 that are MRREQUIRED"
+                id="SPARK-KAFKA-AVRO-LIB-MRREQUIRED-HDP_2_4"
+                name="SPARK-KAFKA-AVRO-LIB-MRREQUIRED-HDP_2_4">
+            <library id="avro-1.7.5.jar"/>
+            <library id="jackson-mapper-asl-1.9.13.jar"/>
+            <library id="jackson-core-asl-1.9.13.jar"/>
+        </libraryNeededGroup>
+        
+        <!-- Spark Kinesis group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Spark Kinesis libraries for HDP 2.4 that are MRREQUIRED"
+                id="SPARK-KINESIS-LIB-MRREQUIRED-HDP_2_4"
+                name="SPARK-KINESIS-LIB-MRREQUIRED-HDP_2_4">
+            <library id="spark-streaming-kinesis-asl-assembly-HDP_2_4"/>
+            <library id="amazon-kinesis-client-1.2.1.jar"/>
+            <library id="aws-java-sdk-kinesis-1.9.16.jar"/>
+            <library id="aws-java-sdk-core-1.9.16.jar"/>            
+            <library id="aws-java-sdk-dynamodb-1.9.16.jar"/>            
+            <library id="aws-java-sdk-cloudwatch-1.9.16.jar"/>            
+            <library id="joda-time-2.7.jar"/>            
+        </libraryNeededGroup>
+        
         
     </extension>
 </plugin>
